--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,14 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+// icons
+@import '~bootstrap-icons/font/bootstrap-icons';
+
+#app {
+    font-weight: 600;
+}
+
+body {
+    background-color: #301934;
+}
